blog: some formatting changes

--- a/docs-src/blog/how-to-set-up-automatic-message-replies-on-instagram.pug
+++ b/docs-src/blog/how-to-set-up-automatic-message-replies-on-instagram.pug
@@ -11,9 +11,9 @@ block blogContent
     There are many good cases where an auto-reply to your Instagram DMs would come in super handy.
     Some common examples are:
 
-    - *Sending instant acknowledgement of receipt* to your customers while they await a real human to take over the chat. This can help with assuring the customer of your presence and promptness.
-    - *Responding to common business inquiries* such as the price of your products or your rate.
-    - *Office Hours Information* informing a prospect that you are currently away and will be back to respond at a specific time.
+    - **Sending instant acknowledgement of receipt** to your customers while they await a real human to take over the chat. This can help with assuring the customer of your presence and promptness.
+    - **Responding to common business inquiries** such as the price of your products or your rate.
+    - **Office Hours Information** informing a prospect that you are currently away and will be back to respond at a specific time.
 
     As valuable as an auto-reply feature may sound, such feature does not exist on the Instagram app itself. However, it
     can be achieved with the [IGdm Pro](https://pro.igdm.me) app. This article will be walking through how you can set-up Instagram auto-replies using the IGdm Pro app.
@@ -59,6 +59,8 @@ block blogContent
       3. Auto-Reply When the Incoming message was sent from a specific user
       4. Auto-Reply All Incoming messages regardless of any conditions
 
+      &nbsp;&nbsp;
+
       Each of the above options can be valuable for different cases. For example, you can select the 4th option (Auto-Reply to all incoming message) during your Off-hours or Lunch break so anyone who sends you a message will immediately get a response telling them you'll be back in a couple of hours.
 
     ![IGdm Pro auto reply condition](../img/blog/auto-reply-condition.png)
@@ -88,6 +90,5 @@ block blogContent
     However, if the person sends you a subsequent message over an hour after, the auto-reply will kick in to respond again.
 
     &nbsp;&nbsp;
-    #### Conclusion
 
-    Thank you for taking the time to read this, and we hope you found this article useful.
+    On that note, we have come to the end of this guide. Thank you for reading and we hope you found this useful.
