blog: add more backlinks to other posts on each post

--- a/docs-src/blog/how-to-send-automated-messages-to-new-followers-on-instagram.pug
+++ b/docs-src/blog/how-to-send-automated-messages-to-new-followers-on-instagram.pug
@@ -17,7 +17,7 @@ block blogContent
     #### Installing IGdm Pro
 
     [IGdm Pro](https://pro.igdm.me) is a handy application that has been designed to improve the effeciency of Instagram users who run businesses
-    with their accounts. The IGdm Pro app offers **[message scheduling](https://igdm.me/blog/how-to-schedule-instagram-messages)**, **quick replies**, **message reminders**, **conversation labelling**
+    with their accounts. The IGdm Pro app offers **[message scheduling](https://igdm.me/blog/how-to-schedule-instagram-messages)**, **[bulk message sending](https://igdm.me/blog/how-to-send-bulk-messages-on-instagram)**, **[auto-replies](https://igdm.me/blog/how-to-set-up-automatic-message-replies-on-instagram)**, **quick replies**,
     and a host of other productivity boosting features.
 
     To install the [IGdm Pro](https://pro.igdm.me) app, simply visit the website ([https://pro.igdm.me](https://pro.igdm.me)), and click
