--- a/docs-src/blog/how-to-schedule-instagram-messages.pug
+++ b/docs-src/blog/how-to-schedule-instagram-messages.pug
@@ -20,7 +20,7 @@ block blogContent
 
     [IGdm Pro](https://pro.igdm.me) is a handy application that has been designed to improve the effeciency of users who run businesses
     with their Instagram accounts. Asides from scheduling messages, IGdm Pro also
-    offers **[bulk message sending](https://igdm.me/blog/how-to-send-bulk-messages-on-instagram)**, **quick replies**, **message reminders**, **conversation labelling**
+    offers **[bulk message sending](https://igdm.me/blog/how-to-send-bulk-messages-on-instagram)**, **[auto-replies](https://igdm.me/blog/how-to-set-up-automatic-message-replies-on-instagram)**, **[automatic welcome message to new followers](https://igdm.me/blog/how-to-set-up-automatic-message-replies-on-instagram)**, **quick replies**
     and a host of other productivity boosting features.
 
     To install the [IGdm Pro](https://pro.igdm.me) app, simply visit the website ([https://pro.igdm.me](https://pro.igdm.me)), and click
