remove doc converter psa banner

--- a/docs-src/_layout.pug
+++ b/docs-src/_layout.pug
@@ -43,11 +43,11 @@ html(lang='en')
       link(rel='stylesheet',          href='/css/global.css')
   body
     block header
-      block psa
-        .psa.lykdat
-          span Check out this document conveter app to &nbsp;
-          a(href="https://docconverter.app/", target="_blank")
-            b Convert PDF to Word (docx)
+      //- block psa
+      //-   .psa.lykdat
+      //-     span Check out this document conveter app to &nbsp;
+      //-     a(href="https://docconverter.app/", target="_blank")
+      //-       b Convert PDF to Word (docx)
       block fork
         a.forkus(href='https://github.com/igdmapps/igdm', target='_blank')
           img(src='/img/github-fork-us.svg', alt='Fork us on GitHub')
