add blog post for sending mass message to followers

--- a/docs-src/blog/index.pug
+++ b/docs-src/blog/index.pug
@@ -8,6 +8,11 @@ block blogContent
   h1 BLOG POSTS
   br
   h4
+    a(href="https://igdm.me/blog/how-to-send-mass-message-to-your-instagram-followers") How To Send Mass Messages To Your Instagram Followers
+  p Learn how to send mass messages to your Instagram followers using the IGdm Pro app. Maximising the reach to your audience and keeping them engaged in the process.
+  br
+  br
+  h4
     a(href="https://igdm.me/blog/how-to-set-up-automatic-message-replies-on-instagram") How To Set Up Automatic Message Replies on Instagram
   p Learn how you can automate direct message replies for your Instagram account. Auto-replies can step in during your off hours to respond to your prospects while you are away.
   br
