blog: tweak phrases and re-order content

--- a/docs-src/blog/how-to-send-mass-message-to-your-instagram-followers.pug
+++ b/docs-src/blog/how-to-send-mass-message-to-your-instagram-followers.pug
@@ -8,12 +8,12 @@ block blogContent
   :markdown-it()
     # How To Send Mass Messages To Your Instagram Followers
 
-    Are you currently searching the internet for a step by step guide on how you can send mass Instagram messages
+    Are you currently searching the internet for a step by step guide on how to send mass messages
     to your Instagram followers? Look no further, you've come to the right place.
 
     In this article, we will be showing you how you can send out mass, personalised Instagram messages to all your followers
     using the [IGdm Pro](https://pro.igdm.me) app.
-    If you previously did it manually, then this will save you a lot time that you could spend making money in other ways.
+    If you previously did it manually, then this will save you a lot time that you could spend doing other valuable things.
 
     &nbsp;&nbsp;
     #### What is IGdm Pro?
@@ -56,11 +56,11 @@ block blogContent
     - To include personalised content (such as each user's display name or username) into your message, hover on the "Insert Variables" button, and click the desired variable you want to include. When the messages are being sent to each user, IGdm Pro will replace the variables with the user's actual username or display name.
     - Once you are done composing your message, simply click the "Send Bulk Message" to get it sent. The messages will begin sending the in background. You can navigate to do other things on the App and check back to see the progress of the messages being sent.
 
+    ![IGdm Pro Compose Mass Message](../img/blog/compose-mass-instagram-message.png)
+
     **NOTE:** In order for all the messages to be sent, you are required to keep the IGdm Pro app running while the messages are being sent.
     Another thing to keep in mind is that, if you have a large number of followers, IGdm Pro will only send the message to your first 1000 followers.
     This is in order to not overwhelm Instagram's services with too many messages.
-
-    ![IGdm Pro Compose Mass Message](../img/blog/compose-mass-instagram-message.png)
 
     &nbsp;&nbsp;
     #### IGdm Pro's Smart Approach To Instargam Mass Messages
