blog: update bulk message howto blog to align with new functionality

--- a/docs-src/blog/how-to-send-bulk-messages-on-instagram.pug
+++ b/docs-src/blog/how-to-send-bulk-messages-on-instagram.pug
@@ -57,19 +57,25 @@ block blogContent
 
     ![IGdm Pro avatar dropdown menu](../img/blog/bulk-message-dropdown.png)
 
-    - A pop-up will appear with a message summarising how the Bulk Message feature works.
-    - Click the "Compose Bulk Message" button below the summary text.
+    - The Bulk Message view will appear with a screen prompting you to select the recipients you want to send your messages to. You have the option to select "Your Followers", "Accounts You Follow", or you can provide your own custom recipient list.
+    - For the purpose of this guide, we will be creating a custom list, so please click the "Create New List" button as seen in the screenshot below.
 
-    ![IGdm Pro Bulk Message Pop-Up](../img/blog/bulk-message-pop-up.png)
+    ![IGdm Pro Bulk Message View](../img/blog/bulk-message-view.png)
 
-    - In the usernames field, paste the usernames of the recipients who you're sending the message to. You can either paste a comma separated list like this "elonmusk, jeffbezos, zuck", or you can separate them with white space like this "elonmusk jeffbezos zuck".
+    - In the usernames field, paste the usernames of the recipients who you intend to send the message to. You can either paste a comma separated list like this "elonmusk, jeffbezos, zuck", or you can separate them with white space like this "elonmusk jeffbezos zuck". You can add up to 1000 usernames in one list.
+    - You can also name your recipient list for easy re-use in the future. In the screenshot below, the recipient list is named "My Fancy Recipient List".
+    - Once that is done, click "Next" to proceed to composing your message.
+
+    ![IGdm Pro Bulk Message Recipients List](../img/blog/bulk-message-recipients.png)
+
     - In the message field, type in the message you would like to send to all these users.
     - To include personalised content (such as each user's display name or username) into your message, hover on the "Insert Variables" button, and click the desired variable you want to include. When the messages are being sent to each user, IGdm Pro will replace the variables with the user's actual username or display name.
     - Once you are done composing your message, simply click the "Send Bulk Message" to get it sent. The messages will begin sending the in background. You can close the pop-up and check back to see the progress of the messages being sent.
+    - Once your bulk message starts, you can pause, resume, or cancel it any time.
 
     **NOTE:** In order for all the messages to be sent, you are required to keep the IGdm Pro app running while the messages are being sent.
 
-    ![Bulk Message Composed](../img/blog/bulk-message-composed.png)
+    ![Bulk Message Composed](../img/blog/bulk-message-compose-view.png)
 
     &nbsp;&nbsp;
     #### IGdm Pro's Smart Approach To Instargam Bulk Messages
