blog: add lead generation blog post

--- a/docs-src/blog/how-to-send-bulk-messages-on-instagram.pug
+++ b/docs-src/blog/how-to-send-bulk-messages-on-instagram.pug
@@ -73,7 +73,7 @@ block blogContent
     - Once you are done composing your message, simply click the "Send Bulk Message" to get it sent. The messages will begin sending the in background. You can close the pop-up and check back to see the progress of the messages being sent.
     - Once your bulk message starts, you can pause, resume, or cancel it any time.
 
-    **NOTE:** In order for all the messages to be sent, you are required to keep the IGdm Pro app running while the messages are being sent.
+    **NOTE:** In order for all the messages to be sent, you are required to keep the IGdm Pro app running while the messages are being sent. However, if you do close the app, the bulk messages will resume the next time the app is launched.
 
     ![Bulk Message Composed](../img/blog/bulk-message-compose-view.png)
 
