--- a/docs-src/blog/index.pug
+++ b/docs-src/blog/index.pug
@@ -8,6 +8,11 @@ block blogContent
   h1 BLOG POSTS
   br
   h4
+    a(href="https://igdm.me/blog/how-to-scrape-followers-of-an-instagram-account") How To Export (or Scrape) The Followers of any Instagram Account
+  p In this article, we will walk you through a guide on how you can generate leads by exporting the users who follow a specific Instagram account.
+  br
+  br
+  h4
     a(href="https://igdm.me/blog/how-to-send-mass-message-to-your-instagram-followers") How To Send Mass Messages To Your Instagram Followers
   p Learn how to send mass messages to your Instagram followers using the IGdm Pro app. Maximising the reach to your audience and keeping them engaged in the process.
   br
