--- a/docs-src/blog/how-to-schedule-instagram-messages.pug
+++ b/docs-src/blog/how-to-schedule-instagram-messages.pug
@@ -78,3 +78,9 @@ block blogContent
     #### Conclusion
 
     With [IGdm Pro](https://pro.igdm.me), scheduling Instagram messages is no longer a hassle. Ready to take control of your Instagram messaging? Download [IGdm Pro](https://pro.igdm.me) today and unlock the power of scheduled messaging.
+
+block readOthers
+  +heading('Read Other Articles')
+  +suggestion('/blog/how-to-scrape-followers-of-an-instagram-account', 'How To Export The Followers of any Instagram Account')
+  +suggestion('/blog/how-to-send-mass-message-to-your-instagram-followers', 'How To Send Mass Messages To Your Instagram Followers')
+  +suggestion('/blog/how-to-set-up-automatic-message-replies-on-instagram', 'How To Automate Instagram Message Replies')
