--- a/docs-src/blog/how-to-send-automated-messages-to-new-followers-on-instagram.pug
+++ b/docs-src/blog/how-to-send-automated-messages-to-new-followers-on-instagram.pug
@@ -72,3 +72,9 @@ block blogContent
     #### Conclusion
 
     We hope you found this article useful, and are able to increase your follower engagement with this valuable feature provided by [IGdm Pro](https://pro.igdm.me).
+
+block readOthers
+  +heading('Read Other Articles')
+  +suggestion('/blog/how-to-scrape-followers-of-an-instagram-account', 'How To Export The Followers of any Instagram Account')
+  +suggestion('/blog/how-to-send-mass-message-to-your-instagram-followers', 'How To Send Mass Messages To Your Instagram Followers')
+  +suggestion('/blog/how-to-set-up-automatic-message-replies-on-instagram', 'How To Automate Instagram Message Replies')
