--- a/docs-src/blog/how-to-send-bulk-messages-on-instagram.pug
+++ b/docs-src/blog/how-to-send-bulk-messages-on-instagram.pug
@@ -89,3 +89,9 @@ block blogContent
 
     In a world where time is precious and efficiency is key, [IGdm Pro](https://pro.igdm.me) is a game-changer for Instagram users looking to streamline their business efforts on the App.
     Whether you're a marketer, influencer, or just an enthusiastic Instagram user, IGdm Pro is your partner for effective outreach and DM management.
+
+block readOthers
+  +heading('Read Other Articles')
+  +suggestion('/blog/how-to-scrape-followers-of-an-instagram-account', 'How To Export The Followers of any Instagram Account')
+  +suggestion('/blog/how-to-send-mass-message-to-your-instagram-followers', 'How To Send Mass Messages To Your Instagram Followers')
+  +suggestion('/blog/how-to-set-up-automatic-message-replies-on-instagram', 'How To Automate Instagram Message Replies')
