blog: update followers export article to mention csv download option

--- a/docs-src/blog/how-to-scrape-followers-of-an-instagram-account.pug
+++ b/docs-src/blog/how-to-scrape-followers-of-an-instagram-account.pug
@@ -57,7 +57,7 @@ block blogContent
 
     - After the selection is made, a username input will appear. You are meant to provide the username of the account whose followers you want to scrape. For the purpose of this guide, we are going to input "zuck" as in the screenshot below.
     - Then finally, you can name the list to easily identify it in the future. We are going to name ours "Zuckerberg's Followers".
-    - Now you can click on the "Generate Leads" button and watch it extract the followers of the target account. Once the usernames are extracted, you will have the option to send them a [mass Instagram message](https://igdm.me/blog/how-to-send-bulk-messages-on-instagram), or to auto-follow them.
+    - Now you can click on the "Generate Leads" button and watch it extract the followers of the target account. Once the usernames are extracted, you will have the option to save them as a CSV file, or send them a [mass Instagram message](https://igdm.me/blog/how-to-send-bulk-messages-on-instagram), or to auto-follow them.
 
     **NOTE:** To avoid overwhelming Instagram's servers, IGdm Pro will only scrape the first 500 followers of the target account.
     Also in some cases, Instagram may allow IGdm to only access the first 50 followers, in which case, only the first 50 followers will be scraped.
